Fixing z-index

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -24,6 +24,7 @@ body{
   color: white;
   padding: 25px;
   transition: 0.2s linear;
+  z-index: 1;
 }
 
 .sticky-nav{
@@ -91,13 +92,14 @@ body{
 
 .icons-container span.active{
   color: black;
+  z-index: 20;
 } 
 
 .cart-container{
   position: absolute;
   top: -10px;
   right: 80px;
-  z-index: 0;
+  z-index: 1;
   border: solid 2px var(--ibero-red-color);
   background: white;
   color: black;
@@ -167,6 +169,7 @@ body{
 .search {
   position: relative;
   width: 50px;
+  z-index: 0 !important;
   height: 50px;
   background: var(--ibero-red-color);
   border-radius: 50px;
@@ -191,7 +194,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 100;
   cursor: pointer;
 }
 
